--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,11 +8,6 @@ on:
 permissions:
   contents: write
 
-env:
-  GO_VERSION: '1.21.4'
-  PKG_NAME: 'github.com/philippta/flyscrape'
-  DOCKER_IMG: ghcr.io/goreleaser/goreleaser-cross
-
 jobs:
   release:
     name: Release
@@ -25,16 +20,15 @@ jobs:
       - name: Fetch Git tags
         run: git fetch --force --tags
 
-      - name: Build and Release
-        run: |
-          docker run \
-            --rm \
-            --privileged \
-            -v /var/run/docker.sock:/var/run/docker.sock \
-            -v $(pwd)/sysroot:/sysroot \
-            -v $(pwd):/go/src/${PKG_NAME} \
-            -w /go/src/${PKG_NAME} \
-            -e CGO_ENABLED=1 \
-            -e GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} \
-            ghcr.io/goreleaser/goreleaser-cross:v${GO_VERSION} \
-            release --clean
+      - name: Set up Go
+        uses: actions/setup-go@v5.1.0
+        with:
+          go-version: '1.23.3'
+
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v6.1.0
+        with:
+          version: '~> v2'
+          args: release --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
