chore: add version number to goreleaser config

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,3 +1,5 @@
+version: 2
+
 before:
   hooks:
     - go mod tidy
@@ -30,3 +32,4 @@ changelog:
     exclude:
       - "^docs:"
       - "^test:"
+      - "^chore:"
